# SemantiCache-block

./: .gitignore  CURRENT_STRATEGY_REPORT.md  README.md  analysis.ipynb  analyze_op_oracle_dataset.py  attention_tracker.py  autoresearch_loop.py  benchmark_autoresearch.py  benchmark_babilong.py  benchmark_longbench.py  benchmark_memory_recall.py  collect_op_distill_data.py  collect_op_onpolicy_oracle_data.py  collect_op_oracle_data.py  compute_paper_ci.py  config.py  diag_llama.py  diag_llama_deep.py  diag_llama_depth.py  download_model.py  dump_token_retention.py  eval_ablation.py  eval_budget_sensitivity.py  eval_memory_and_scaling.py  eval_multi_needle.py  eval_niah.py  eval_overhead.py  eval_ruler_niah.py  eval_ruler_vt_cwe.py  eviction_policies.py  kv_cache_manager.py  main.py  op_policy_model.py  plot_depth_heatmap.py  plot_supplementary_figures.py  ppt.md  program.md  pyproject.toml  quantized_tier_cache.py  requirements.txt  (+16 more)
.tmp/: 2501.01005v2.txt
bench/: baseline_smoke.py  plot_phase1_gate.py  plot_prior_evidence.py  run_moneyshot.py  vllm_loadgen.py
data/: paul_graham_essays.json
research_plan/: 2026-06-13-semserve-vllm-implementation-plan.md  chpbychp.md  op_sievekv_research_story_and_system_plan.md  research_plan.md  trust_region_reweighting_design.md
results/: debug_full.json  diag_full_1000.json  diag_full_2000.json  diag_full_500.json  diag_h2o_1000.json  diag_h2o_1000_b30.json  diag_h2o_1000_b50.json  diag_h2o_1000_v2.json  diag_h2o_2000_v2.json  diag_semantic_1000.json  diag_semantic_1000_b30.json  diag_semantic_1000_b30_v2.json  paper_tables.tex  (+28 more)
(+110 files in other folders)
