[project]
name = "semanticache"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "matplotlib>=3.10.8",
    "modelscope>=1.34.0",
    "numpy>=2.3.5",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.66.5",
    "transformers>=5.3.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu130"

